--- a/contacts.html
+++ b/contacts.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
 
+
         </header>
         <!-- меню -->
         <menu class="menu">
@@ -113,12 +114,12 @@
             © Монолит
         </div>
         <div class="arrow"></div>
-        <div class="social">
-            <ul class="social__list">
-                <li class="social__item social__item-inst"></li>
-                <li class="social__item social__item-fb"></li>
-                <li class="social__item social__item-vk"></li>
-            </ul>
+        <div class="footer__location">
+            <div class="address">
+                г. Брянск
+                ул. Ромашина, д.1, оф.4
+            </div>
+            <div class="phone__text">8 (4832) 34-55-88</div>
         </div>
     </footer>
     <script src="js/common.js"></script>
