--- a/contacts.html
+++ b/contacts.html
@@ -122,6 +122,8 @@
             <div class="phone__text">8 (4832) 34-55-88</div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"
+        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="js/common.js"></script>
 
 </body>
