--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
         <div class="conteiner">
             <div class="communications">
                 <div class="sidebar">
-                    <form action="server.php" method="post" id="question-form">
+                    <form action="https://formspree.io/vlad_dvorcov@mail.ru" method="post" id="question-form">
                         <div class="question__form">
                             <div class="question__form-caption">
                                 Задайте вопрос
@@ -122,10 +122,6 @@
             <div class="phone__text">8 (4832) 34-55-88</div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.js"
-        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script src="js/common.js"></script>
-
-</body>
+    </body>
 
 </html>
